[build-system]
requires = ["setuptools >= 58.0", "setuptools_scm"]

[project]
name = "htcluster"
dependencies = [
    "pydantic",
    "structlog",
]
dynamic = ["version"]

[project.optional-dependencies]
job_submit = [
    "numpy",
    "paramiko",
    "python-dateutil",
    "pyyaml",
    "pyzmq",
    "requests",
]
job_exec = [
    "htcondor",
    "python-dateutil",
    "pyzmq",
]
dev = ["ipython"]
# unfortunately we can't reference the other groups
all = [
    "htcondor",
    "ipython",
    "numpy",
    "paramiko",
    "python-dateutil",
    "pyyaml",
    "pyzmq",
    "requests",
]

[project.scripts]
htcluster-submit = "job_submit:main"
htcluster-server = "job_exec.server:main"
htcluster-wrapper = "job_wrapper:main"
get-container-hash = "scripts.get_container_hash:main"

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = "ve"

[tool.setuptools_scm]