[build-system]
requires = ["setuptools >= 58.0", "setuptools_scm"]

[project]
name = "htcluster"
dependencies = [
    "pydantic",
    "structlog",
    "pyyaml"
]
dynamic = ["version"]

[project.optional-dependencies]
job_submit = [
    "numpy",
    "paramiko",
    "python-dateutil",
    "pyzmq",
    "requests",
]
job_exec = [
    "htcondor==24.2.1",
    "python-dateutil",
    "pyzmq",
]
# docs = [
#     "sphinx",
#     "sphinx-rtd-theme"
# ]
dev = ["ipython"]
# unfortunately we can't reference the other groups
all = [
    "htcondor==24.2.1",
    "ipython",
    "numpy",
    "paramiko",
    "python-dateutil",
    "pyzmq",
    "requests",
    # "sphinx",
    # "sphinx-rtd-theme"
]

[project.scripts]
htcluster-submit = "htcluster.job_submit.__main__:main"
htcluster-server = "htcluster.job_exec.__main__:main"
htcluster-wrapper = "htcluster.job_wrapper.__main__:main"
get-container-hash = "htcluster.scripts.get_container_hash:main"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.pyright]
venvPath = "."
venv = "ve"

[tool.ruff]
src = ["src"]

[tool.setuptools_scm]
